fix(postfx): apply effects to animation exports

--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
         <div class="field"><label>BG</label><input id="bg" type="color" value="#ffffff"></div>
         <div class="field"><label>FG</label><input id="fg" type="color" value="#000000"></div>
       </section>
+      <section class="control-section control-section--postfx">
+        <h2 class="section-title">POST-FX</h2>
+        <div id="postFxControls" class="postfx-container"></div>
+      </section>
       <section class="control-section">
         <h2 class="section-title">ANTEPRIMA</h2>
         <div class="field"><label>PREVIEW SCALE</label><div class="slider"><input id="scale" type="range" min="0.25" max="3" step="0.25" value="1"><input id="scaleNum" class="num" type="number" min="0.25" max="3" step="0.25" value="1"></div></div>
