Revert "Remove gradient map feature"

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="fields-rail">
           <div class="field"><label>STYLE</label><select id="style"><option value="solid">SOLID</option><option value="outline">OUTLINE</option><option value="ring">RING</option></select></div>
           <div class="field"><label>OUTLINE THICKNESS</label><div class="slider"><input id="thickness" type="range" min="1" max="6" step="1" value="2"><input id="thicknessNum" class="num" type="number" min="1" max="6" step="1" value="2"></div></div>
-          <div class="field field--gradient" hidden aria-hidden="true">
+          <div class="field field--gradient">
             <label>GRADIENT MAP</label>
             <select id="gradientMap"></select>
             <div id="gradientPreview" class="gradient-preview" hidden></div>
